	random.methods ivar -> inst.method -> ivar

	* amemiya method is not implement for unbalanced panels: an error
	message is now returned.
 

Changes since version 1-1.1

	* part of the "details" section of the fixef.plm man page is
	removed

	* a fitted.value method is now available for plm objects. It
	returns the fitted values of the untransformed response
	
	* in pdiff, a drop=FALSE is added. This omission was responsible
	of a bug while estimating a model like plm(inv~value-1, data =
	Grunfeld, model = "fd")

	* the lev2var is changed so that it doesn't result in an error
	when the data.frame contains no factor: this was responsible of a
	bug in plm.ht

	
Changes since version 1-1.2

	* the inst directory was missing, it has been added again
	
Changes since version 1-1.3

	* a relevant error message is added when a within model is
	estimated with no time-varying variable

	* the formula method for dynformula objects is now exported

	* a misleading notation was corrected for plm.ht model

	* the definition of sigma2$id for unbalanced ht model is
	corrected, an harmonic mean of Ti being used

	* the definition of tss.default is simplified

	* the fitted.values element was missing for plm objects and has
	been added

Change since version 1-1.4

	* a args argument is added for plm objects, and the internal
	function relies now on it (and not on the call as previously)

	* more attention is paid when one of the estimated components of
	the variance is negative (warning or error messages result)

	* pdata.frame objects are re-introduced. They are used to compute
	model.frames. Extraction from pdata.frames results in 'pserie'
	objects which have an index attribute.

	* the print method of ercomp is now exported

	* the first argument of pgmm may now be a formula. A lag.form must
	be provided in this case
	
	* hausman-taylor estimation is now performe the pht function. For
	backaward compatibility reasons, it is still possible to estimate
	this model with plm