@@ -1,5 +1,5 @@
 Package: plm
-Version: 1.2-0
+Version: 1.2-1
 Date: 2009-09-11
 Title: Linear models for panel data
 Author: Yves Croissant <yves.croissant@let.ish-lyon.cnrs.fr>, Giovanni Millo <Giovanni_Millo@Generali.com>
