@@ -71,8 +71,10 @@ S3method(diff, pserie)
 S3method(between, pserie)
 S3method(Between, pserie)
 S3method(Within, pserie)
+S3method(print, pserie)
 S3method(summary, pserie)
 S3method(print, summary.pserie)
+S3method(as.matrix, pserie)
 # ercomp
 S3method(ercomp, formula)
 S3method(ercomp, plm)
